--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: CI=false npm ci 
-    - run: npm run build
+    - run: CI=false npm run build
       
     - name: Insert .nojekyll in out dir
       run: |
