--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       
     - name: Insert .nojekyll in out dir
       run: |
-        cd out
+        cd build
         touch .nojekyll
         cd ..
         
